@@ -13,6 +13,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="defedit.css"/>
+    <link rel="shortcut icon" href="../dist-docs/vm-for-trial/im-icon.png" type="image/png"/>
     <title>INTER-Mediator - Definition File Editor</title>
     <script src="defedit.php"></script>
     <script type="text/javascript">
