@@ -1,0 +1,28 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>INTER-Mediator Demo</title>
+    <link rel="stylesheet" type="text/css" href="../../sample.css">
+    <script type="text/javascript" src="def03_MySQL.php"></script>
+</head>
+<body onload="INTERMediator.construct(true);">
+<div id="IM_NAVIGATOR"></div>
+<table style="float: left">
+    <tbody>
+    <tr><td></td><td data-im="person_list@name"></td></tr>
+    </tbody>
+</table>
+<table style="float: left; margin-left: 12px">
+    <tbody>
+    <tr><th>名前</th><td><input type="text" data-im="person_detail@name"/></td></tr>
+    <tr><th>住所</th><td><input type="text"  data-im="person_detail@address"/></td></tr>
+    <tr><th>メール</th><td><input type="text"  data-im="person_detail@mail"/></td></tr>
+    <tr><th>地域</th><td><input type="text"  data-im="person_detail@location"/></td></tr>
+    <tr><th>分類</th><td><input type="text"  data-im="person_detail@category"/></td></tr>
+    <tr><th>メモ</th><td><textarea data-im="person_detail@memo"></textarea></td></tr>
+    </tbody>
+</table>
+<br clear="all"/>
+</body>
