@@ -224,6 +224,21 @@
         <td></td>
         <td></td>
     </tr>
+    <tr>
+        <td colspan="2">Hands-on Result</td>
+        <td>
+            Session 1<br>
+            <a href="Hands-on/Session2/page03_MySQL.html">Session 2</a><br/>
+            Session 3
+        </td>
+        <td>
+            Session 1<br>
+            <a href="Hands-on/Session2/page03_FMS.html">Session 2</a><br/>
+            Session 3
+        </td>
+        <td></td>
+        <td></td>
+    </tr>
 </table>
 
 <h2>Demo Script</h2>
